[package]
name = "fileperson"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
caseless = "0.2.1"
directories = "4.0.1"
itertools = "0.10.1"
log = "0.4.14"
natord = "1.0.9"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
strum = "0.24.0"
thiserror = "1"
walkdir = "2.3.2"
rodio = { path = "../4k/rodio" }
rayon = "1"
camino = { version="1.0", features=["serde1"] }

[dev-dependencies]
lipsum = "0.8.0"
rand = "0.8.4"
tempdir = "0.3.7"
